deployment/mesh-infra/routing/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: "cloud-gateway"
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "cloud.ouludatalab.fi"
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: false
  - hosts:
    - "cloud.ouludatalab.fi"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-gw-cert
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: "cloud-virtual-service"
spec:
  gateways:
  - "cloud-gateway"
  hosts:
  - "cloud.ouludatalab.fi"
  http:
  - match:  # NOTE (2)
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak.default.svc.cluster.local
        port:
          number: 8080
  - match:  # NOTE (1)
    - uri:
        prefix: /argocd/
    - uri:
        prefix: /argocd
    rewrite:
      uri: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /minio/
    - uri:
        prefix: /minio
    rewrite:
      uri: /
    route:
    - destination:
        host: minio.minio.svc.cluster.local
        port:
          number: 9090
